myapp/static/myapp/css/gallery.css
#gallery {
  position: relative; 
  width: 100%; 
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  // just high enough for two gallery lines;
  height: 460px;
  overflow: hidden;
  display: block;
}

#next {
  margin: 10px;
}
#previous {
  margin: 10px;
}


hr {
  max-width: 570px;
  margin: auto;
}


#gallery > a > img {
  // not sure why, but margins dont overlap with current setup;
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
  display: inline-block;
  height: 200px;
}


#gallery_index  {
    max-width: 530px;
    display: flex;
    justify-content: center;
    margin: 20px;
    margin-left: auto;
    margin-right: auto;
}

/* mobile in portrait mode */
@media screen and (max-width: 400px) {
  .arrow {
    display: none;
  }
  #gallery {
    height: auto;
  }
  #gallery > a {
    display: block;
    margin-bottom: 10px;
    margin-top: 10px;
  }
  #gallery > a > img {
    height: auto;
    max-width: 92%;
    max-height: 100%;
    margin-left: 4%;
    margin-right: 4%;
  }
}

